[package]
name = "tinyvm"
version = "0.1.0"
authors = ["Erik Källén <erik_kallen@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
num-traits = "0.2"
num-derive = "0.3"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.1"
